# Mindscape-360

./: .gitattributes  .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml  CMakeLists.txt
composeApp/src/androidMain/cpp/: cardboard.cpp  distortion_renderer.cpp  general.hpp  head_tracker.cpp  lens_distortion.cpp  qr_code.cpp
composeApp/src/androidMain/kotlin/cardboard/: GLSurfaceView.kt  NativeRenderView.android.kt  NativeRenderer.android.kt  util.kt
composeApp/src/androidMain/kotlin/cardboard/sdk/: DistortionRenderer.android.kt  HeadTracker.android.kt  LensDistortion.android.kt  QrCode.android.kt  util.android.kt
composeApp/src/androidMain/kotlin/cardboard/util/: Assets.android.kt  MediaPlayer.android.kt
composeApp/src/androidMain/kotlin/edu/moravian/cardboard/util/: MediaPlayer.android.kt
composeApp/src/androidMain/kotlin/edu/moravian/mindscape360/: VideoUri.android.kt
composeApp/src/androidMain/kotlin/vr/app/: MainActivity.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/cardboard/: CardboardRenderer.kt  Mesh.kt  NativeRenderView.kt  NativeRenderer.kt  (+1 more)
composeApp/src/nativeInterop/cinterop/: cardboard.def  nskvoprotocol.def  vcimmersionprotocol.def
gradle/: libs.versions.toml
iosApp/: setup.sh
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: qr_code.mm  qr_scan_view_controller.mm
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
(+54 files in other folders)
